metodo de carga de bd en index

--- a/ProyectoFinanciera/Views/Serialize/DolarVenta.cshtml
+++ b/ProyectoFinanciera/Views/Serialize/DolarVenta.cshtml
@@ -9,6 +9,6 @@
 <div class="row">
     <div class="panel panel-default">
         <div class="panel-heading">Tipo de Cambio Venta del Dólar</div>
-        <div class="panel-body graph"><p><img class="img-responsive" src='@Url.Action("Graph", "Serialize", new {codigo="318" })' /></p></div>
+        <div class="panel-body graph"><p><img class="img-responsive" src='@Url.Action("Graph", "Serialize", new {codigo="318", Title="Tipo de Cambio de Venta Dólar" })' /></p></div>
     </div>
 </div>
