--- a/ProyectoFinanciera/Views/Indicadores/basicaPasiva.cshtml
+++ b/ProyectoFinanciera/Views/Indicadores/basicaPasiva.cshtml
@@ -13,7 +13,7 @@
         <div class="panel-body graph">
             <p>
                 <img class="img-responsive" src='@Url.Action("graphTasas", "Indicadores", new{ inicio=ViewBag.inicio, final=ViewBag.final, indicador=ViewBag.indicador,
-                                                                         titulo = ViewBag.titulo })' />
+                                                                         titulo = ViewBag.titulo, mayor= ViewBag.mayor, menor=ViewBag.menor })' />
             </p>
         </div>
     </div>
