--- a/ProyectoFinanciera/Views/Shared/_Layout.cshtml
+++ b/ProyectoFinanciera/Views/Shared/_Layout.cshtml
@@ -6,6 +6,7 @@
     <title>@ViewBag.Title - My ASP.NET Application</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
+    @Scripts.Render("~/bundles/jquery")
 </head>
 <body>
     <div class="navbar navbar-inverse navbar-fixed-top">
@@ -32,8 +33,9 @@
                             <li>@Html.ActionLink("Tasa Básica Pasiva", "basicaPasiva", "Indicadores")</li>
                             <li>@Html.ActionLink("Tasa de Política Monetaria", "politicaMonetaria", "Indicadores")</li>
                         </ul>
-                    </li>                   
+                    </li>
                     <li>@Html.ActionLink("Comportamiento Indicadores", "comportamientoIndicadores", "Indicadores")</li>
+                    <li>@Html.ActionLink("Suscribirse", "Create", "Clientes")</li>
                 </ul>
             </div>
         </div>
@@ -46,7 +48,7 @@
         </footer>
     </div>
 
-    @Scripts.Render("~/bundles/jquery")
+
     @Scripts.Render("~/bundles/bootstrap")
     @RenderSection("scripts", required: false)
 </body>
