--- a/ProyectoFinanciera/Views/Clientes/Create.cshtml
+++ b/ProyectoFinanciera/Views/Clientes/Create.cshtml
@@ -69,14 +69,14 @@
     <div class="form-group">
         @Html.Label("Provincia", htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
-            @Html.DropDownList("Provincia", null, htmlAttributes: new { @class = "form-control", id = "provincias" })
+            @Html.DropDownList("Provincia", null,"Seleccione uno", htmlAttributes: new { @class = "form-control", id = "provincias" })
             @Html.ValidationMessageFor(model => model.Id_distrito, "", new { @class = "text-danger" })
         </div>
     </div>
     <div class="form-group">
         @Html.Label("Cantón", htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
-            @Html.DropDownList("Id_canton", null, htmlAttributes: new { @class = "form-control", id = "cantones", disabled = "disbaled" })
+            @Html.DropDownList("Id_canton", null, "", htmlAttributes: new { @class = "form-control", id = "cantones", disabled = "disbaled" })
             @Html.ValidationMessageFor(model => model.Id_distrito, "", new { @class = "text-danger" })
         </div>
     </div>
@@ -84,7 +84,7 @@
     <div class="form-group">
         @Html.LabelFor(model => model.Id_distrito, "Distrito", htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
-            @Html.DropDownList("Id_distrito", null, htmlAttributes: new { @class = "form-control", id = "distritos", disabled = "disbaled" })
+            @Html.DropDownList("Id_distrito", null, "", htmlAttributes: new { @class = "form-control", id = "distritos", disabled = "disbaled" })
             @Html.ValidationMessageFor(model => model.Id_distrito, "", new { @class = "text-danger" })
         </div>
     </div>
@@ -104,13 +104,19 @@
             var provincia_id = $(this).val();
             $("#cantones").removeAttr("disabled");
             $("#distritos").attr('disabled', 'disabled');
+            $("#distritos").empty();
             $.getJSON("../Clientes/LoadCantonesByProvincia", { id: provincia_id },
                 function (data) {
                     var select = $("#cantones");
                     select.empty();
-                    $.each(data, function (index, itemData) {
-                        select.append($('<option/>').val(itemData.Value).text(itemData.Text));
-                    });
+                    if (data == "Error") {
+                        select.empty();
+                    } else {
+                        $.each(data, function (index, itemData) {
+                            select.append($('<option/>').val(itemData.Value).text(itemData.Text));
+                        });
+                    }
+                   
                 });
         });    
         $("#cantones").change(function () {
@@ -120,9 +126,14 @@
                 function (data) {
                     var select = $("#distritos");
                     select.empty();
-                    $.each(data, function (index, itemData) {
-                        select.append($('<option/>').val(itemData.Value).text(itemData.Text));
-                    });
+                    if (data == "Error") {
+                        select.empty();
+                    } else {
+                        $.each(data, function (index, itemData) {
+                            select.append($('<option/>').val(itemData.Value).text(itemData.Text));
+                        });
+                    }
+                    
                 });
         }); 
     });
