--- a/ProyectoFinanciera/Views/Shared/_Layout.cshtml
+++ b/ProyectoFinanciera/Views/Shared/_Layout.cshtml
@@ -17,10 +17,13 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("El Progreso", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
-            </div>
+                   <img src="@Url.Content("~/Content/images/092387dd-e036-4842-85e1-d40f738c7537_200x200.png")" style="width:40px;height:40px;">
+                   
+</div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
+                    <li> <div class="col-sm-1"></div> </li>
+                    <li> @Html.ActionLink("El Progreso", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })</li>
                     <li>@Html.ActionLink("Acerca de", "About", "Home")</li>
                     <li class="dropdown">
                         <a class="dropdown-toggle" data-toggle="dropdown">
@@ -36,6 +39,7 @@
                     </li>
                     <li>@Html.ActionLink("Comportamiento Indicadores", "comportamientoIndicadores", "Indicadores")</li>
                     <li>@Html.ActionLink("Suscribirse", "Create", "Clientes")</li>
+                    <li>@Html.ActionLink("Foro", "Index", "Preguntas")</li>
                 </ul>
             </div>
         </div>
