correo con indicadores a los suscriptores

--- a/ProyectoFinanciera/Views/Home/About.cshtml
+++ b/ProyectoFinanciera/Views/Home/About.cshtml
@@ -2,11 +2,18 @@
 @{
     ViewBag.Title = "About";
 }
-
+<br />
 <div class="row">
-    <div class="panel about panel-default">
+    <div >
+       <img src="~/Content/images/d5827044-9927-4ec5-b205-fb6cdc646ab8_200x200.png" class="img-responsive center-block"/>
+    </div>  
+</div>
+
+<br />
+<div class="row">
+    <div class="panel panel-default">
+        <div class="panel-heading about"><h4>Historia</h4></div>
         <div class="panel-body">
-            <h3>Historia</h3>
             <p>
                 El Progreso es una empresa
                 costarricense, nacida en el año 2010 en
@@ -44,9 +51,9 @@
     </div>
 </div>
 <div class="row">
-    <div class="panel  about panel-default">
+    <div class="panel  panel-default">
+        <div class="panel-heading about"><h4>Misión</h4></div>
         <div class="panel-body">
-            <h3>Misión</h3>
             <p>
                 Ser creativos y eficaces en la gestión de inversiones y en la generación de oportunidades
                 de inversión y soluciones financieras, fundamentados en las necesidades de las empresas y en nuestra experiencia y conocimiento, creando valor a nuestros accionistas
@@ -56,9 +63,9 @@
     </div>
 </div>
 <div class="row">
-    <div class="panel  about panel-default">
+    <div class="panel  panel-default">
+        <div class="panel-heading about"><h4>Visión</h4></div>
         <div class="panel-body">
-            <h3>Visión</h3>
             <p>
                 Ser reconocidos como la entidad financiera líder en la creación, desarrollo,
                 administración y distribución de inversiones, comprometidos con el crecimiento
@@ -68,9 +75,9 @@
     </div>
 </div>
 <div class="row">
-    <div class="panel  about panel-default">
+    <div class="panel panel-default">
+        <div class="panel-heading about "><h4>Valores</h4></div>
         <div class="panel-body">
-            <h3>Valores</h3>
             <ul>
                 <li>Integridad</li>
                 <li>Creatividad</li>
@@ -83,9 +90,9 @@
     </div>
 </div>
 <div class="row">
-    <div class="panel  about panel-default">
+    <div class="panel panel-default">
+        <div class="panel-heading about"><h4>Responsabilidad Social</h4></div>
         <div class="panel-body">
-            <h3>Responsabilidad Social</h3>
             <p>
                 En El Progreso contamos con políticas y prácticas fundamentadas en principios y
                 valores, que contribuyen al logro de los objetivos de la compañía y al fortalecimiento de
@@ -103,25 +110,13 @@
     </div>
 </div>
 <div class="row">
-    <div class="panel  about panel-default">
+    <div class="panel panel-default">
+        <div class="panel-heading about"><h4>Organigrama</h4></div>
         <div class="panel-body">
-            <h3>Organigrama</h3>
+            <img src="~/Content/images/organigrama.jpeg" class="img-responsive" />
         </div>
     </div>
 </div>
-<div class="row">
-    <div class="panel  about panel-default">
-        <div class="panel-body">
-            <h3>Objetivo General</h3>
-        </div>
-    </div>
-</div>
-<div class="row">
-    <div class="panel  about panel-default">
-        <div class="panel-body">
-            <h3>Objetivos específicos</h3>
-        </div>
-    </div>
-</div>
+
 
 
